# LibPKMN-images

./: CMakeLists.txt  README
generation-1/: CMakeLists.txt
generation-1/red-blue/: CMakeLists.txt
generation-1/yellow/: CMakeLists.txt
generation-2/: CMakeLists.txt
generation-2/crystal/: CMakeLists.txt
generation-2/crystal/shiny/: CMakeLists.txt
generation-2/gold/: CMakeLists.txt
generation-2/gold/shiny/: CMakeLists.txt
generation-2/silver/: CMakeLists.txt
generation-2/silver/shiny/: CMakeLists.txt
generation-3/: CMakeLists.txt
generation-3/emerald/: CMakeLists.txt
generation-3/emerald/shiny/: CMakeLists.txt
generation-3/firered-leafgreen/: CMakeLists.txt
generation-3/firered-leafgreen/shiny/: CMakeLists.txt
generation-3/ruby-sapphire/: CMakeLists.txt
generation-3/ruby-sapphire/shiny/: CMakeLists.txt
generation-4/: CMakeLists.txt
generation-4/diamond-pearl/: CMakeLists.txt
generation-4/diamond-pearl/female/: CMakeLists.txt
generation-4/diamond-pearl/shiny/: CMakeLists.txt
generation-4/heartgold-soulsilver/: CMakeLists.txt
generation-4/heartgold-soulsilver/female/: CMakeLists.txt
generation-4/heartgold-soulsilver/shiny/: CMakeLists.txt
generation-4/platinum/: CMakeLists.txt
generation-4/platinum/female/: CMakeLists.txt
generation-4/platinum/shiny/: CMakeLists.txt
generation-5/: CMakeLists.txt
generation-5/black-white/: CMakeLists.txt
generation-5/black2-white2/: CMakeLists.txt
misc/: CMakeLists.txt
pokemon-icons/: CMakeLists.txt
pokemon-icons/female/: CMakeLists.txt
(+6 files in other folders)
